SW-8652 Fixed vertical align of option images in emotion template

--- a/templates/_emotion/frontend/_resources/styles/emotion.css
+++ b/templates/_emotion/frontend/_resources/styles/emotion.css
@@ -3911,6 +3911,8 @@ body #content .banner-slider-emotion .ajaxSlider .slide_navigation {
     background-clip: padding-box;
 }
 #buybox .configurator--variant .option--label img {
-    margin: 0 auto;
-    vertical-align: middle;
+    position: absolute;
+    margin: auto;
+    left: 0; right: 0;
+    top: 0; bottom: 0;
 }
